--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
+  "heroku-run-build-script": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benr1312/falling_items_game.git"
