--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Falling items need to be collected!",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --config webpack/prod.js && http-server ./dist",
-    "start": "webpack-dev-server --config webpack/base.js --open"
+    "build": "webpack --config webpack/prod.js",
+    "start": "webpack-dev-server --config webpack/base.js --open",
+    "heroku-postbuild": "http-server ./dist"
   },
   "repository": {
     "type": "git",
