--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js",
-    "start": "webpack-dev-server --config webpack/base.js --open",
-    "heroku-postbuild": "http-server ./dist"
+    "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "repository": {
     "type": "git",
@@ -37,7 +36,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "http-server": "^0.11.1",
+    "express": "^4.17.1",
     "phaser": "^3.16.2"
   }
 }
